<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_rounded_corners"

    android:paddingVertical="@dimen/_15sdp"

    android:backgroundTint="@color/lightWhiteMainBackground"


    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/networkConfigurationIncorrect"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/roboto_medium"

        android:layout_marginHorizontal="@dimen/_15sdp"
        android:padding="@dimen/_1sdp"

        android:textAlignment="textStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/networkConfigurationIncorrectMessage"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/roboto_regular"

        android:layout_marginHorizontal="@dimen/_15sdp"
        android:padding="@dimen/_1sdp"

        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="?attr/greenAppColor"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/roboto_medium"

        android:padding="@dimen/_3sdp"

        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_20sdp"

        app:layout_constraintTop_toBottomOf="@id/message"

        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>